# ntc-advanced-systems-test

./: .gitattributes  .gitignore  README.md
.github/workflows/: main.yml
task1_zmq/: CMakeLists.txt  build.bat  conanfile.py
task1_zmq/src/: data_loader.cpp  data_loader.hpp  main.cpp  server.cpp  server.hpp  student.hpp
task2_http/: CMakeLists.txt  build.bat  conanfile.py  test.bat
task2_http/data/: input-01.txt  text2.txt
task2_http/src/: analyze.cpp  analyze.hpp  main.cpp  types.hpp  utils.hpp
task2_http/static/: index.html
tests/: run_task1_test.sh  run_task2_test.sh  task1_expected.txt
